# dualsense-sfx-haptics

./: .gitignore  PROJECT_CHANGES.md  README.md  haptics.example.json  package.json
assets/iconmod/: CREDITS.txt  modengine.ini
src/gui/: DualSenseHaptics.csproj  MainForm.cs  Program.cs  app.manifest
src/main/: main.js  preload.js
src/native/: CMakeLists.txt
src/native/core/: haptic_out.h
src/native/fmod_probe/: CMakeLists.txt  dllmain.cpp  fmodex64.def  haptic_out.cpp
src/native/games/sekiro/: profile.json  thunks.asm  thunks_gen.h
src/native/haptic_test/: enum.cpp  play34.cpp  pulse_test.cpp
